force-app/main/default/objects/VOCLineItem__c/VOCLineItem__c.object-meta.xml
<CustomObject>
    <description>Custom Case &amp; Product&apos;s Junction Object</description>
    <label>VOC 항목</label>
    <nameField>
        <displayFormat>VoCL-{0000}</displayFormat>
        <label>VOC Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>