force-app/main/default/objects/VOCLineItem__c/fields/BeforeAfterServing__c.field-meta.xml
<CustomField>
    <fullName>BeforeAfterServing__c</fullName>
    <description>배식전/후</description>
    <label>Before/After Serving</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>배식전</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>배식후</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>해당사항없음</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>