force-app/main/default/objects/VOCLineItem__c/fields/BoxVOCQuantity__c.field-meta.xml
<CustomField>
    <fullName>BoxVOCQuantity__c</fullName>
    <description>Box VoC량</description>
    <label>Box VOC Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>