force-app/main/default/objects/VOCLineItem__c/fields/ChangeReason__c.field-meta.xml
<CustomField>
    <fullName>ChangeReason__c</fullName>
    <description>변경사유</description>
    <label>Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>