force-app/main/default/objects/VOCLineItem__c/fields/CountryofOrigin__c.field-meta.xml
<CustomField>
    <fullName>CountryofOrigin__c</fullName>
    <label>CountryofOrigin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>