force-app/main/default/objects/VOCLineItem__c/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <description>납품일</description>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>