force-app/main/default/objects/VOCLineItem__c/fields/DeliveryQuantity__c.field-meta.xml
<CustomField>
    <fullName>DeliveryQuantity__c</fullName>
    <description>납품량</description>
    <label>Delivery Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>