force-app/main/default/objects/VOCLineItem__c/fields/DelliveryHistoryNumber__c.field-meta.xml
<CustomField>
    <fullName>DelliveryHistoryNumber__c</fullName>
    <description>유통이력번호</description>
    <label>Dellivery History Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>