force-app/main/default/objects/VOCLineItem__c/fields/ExpireDate__c.field-meta.xml
<CustomField>
    <fullName>ExpireDate__c</fullName>
    <description>유통기한</description>
    <label>Expire Date</label>
    <type>Date</type>
</CustomField>