force-app/main/default/objects/VOCLineItem__c/fields/HasItem__c.field-meta.xml
<CustomField>
    <fullName>HasItem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>실물</description>
    <label>Has Item?</label>
    <type>Checkbox</type>
</CustomField>