force-app/main/default/objects/VOCLineItem__c/fields/IMAGE1__c.field-meta.xml
<CustomField>
    <fullName>IMAGE1__c</fullName>
    <label>IMAGE1</label>
    <type>Url</type>
</CustomField>