force-app/main/default/objects/VOCLineItem__c/fields/img_file_url3__c.field-meta.xml
<CustomField>
    <fullName>img_file_url3__c</fullName>
    <label>img_file_url3</label>
    <type>Url</type>
</CustomField>