force-app/main/default/objects/VOCLineItem__c/fields/IsNormal__c.field-meta.xml
<CustomField>
    <fullName>IsNormal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>정상</description>
    <label>Is Normal?</label>
    <type>Checkbox</type>
</CustomField>