force-app/main/default/objects/VOCLineItem__c/fields/LogisticsMeasureResults__c.field-meta.xml
<CustomField>
    <fullName>LogisticsMeasureResults__c</fullName>
    <description>물류조치결과</description>
    <label>Logistics Measure Results</label>
    <length>255</length>
    <type>Text</type>
</CustomField>