force-app/main/default/objects/VOCLineItem__c/fields/ManagementWebsite__c.field-meta.xml
<CustomField>
    <fullName>ManagementWebsite__c</fullName>
    <description>관리처/사이트명</description>
    <label>Management/ Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>