force-app/main/default/objects/VOCLineItem__c/fields/ManagementWebsiteCode__c.field-meta.xml
<CustomField>
    <fullName>ManagementWebsiteCode__c</fullName>
    <label>ManagementWebsiteCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>