force-app/main/default/objects/VOCLineItem__c/fields/ManufactureDate__c.field-meta.xml
<CustomField>
    <fullName>ManufactureDate__c</fullName>
    <description>제조일자</description>
    <label>Manufacture Date</label>
    <type>Date</type>
</CustomField>