force-app/main/default/objects/VOCLineItem__c/fields/MenuInformation__c.field-meta.xml
<CustomField>
    <fullName>MenuInformation__c</fullName>
    <description>메뉴정보</description>
    <label>Menu Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>