force-app/main/default/objects/VOCLineItem__c/fields/OccurrenceDate__c.field-meta.xml
<CustomField>
    <fullName>OccurrenceDate__c</fullName>
    <description>발생일</description>
    <label>Occurrence Date</label>
    <type>Date</type>
</CustomField>