force-app/main/default/objects/VOCLineItem__c/fields/OderDetailNumber__c.field-meta.xml
<CustomField>
    <fullName>OderDetailNumber__c</fullName>
    <description>주문상세번호</description>
    <label>Oder Detail Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>