force-app/main/default/objects/VOCLineItem__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <description>주문번호</description>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>