force-app/main/default/objects/VOCLineItem__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>ProductCode</label>
    <length>7</length>
    <type>Text</type>
</CustomField>