force-app/main/default/objects/VOCLineItem__c/fields/reg_dt__c.field-meta.xml
<CustomField>
    <fullName>reg_dt__c</fullName>
    <label>reg_dt</label>
    <type>DateTime</type>
</CustomField>