force-app/main/default/objects/VOCLineItem__c/fields/RequestforJudgment__c.field-meta.xml
<CustomField>
    <fullName>RequestforJudgment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>판정요청</description>
    <label>Request for Judgment</label>
    <type>Checkbox</type>
</CustomField>