force-app/main/default/objects/VOCLineItem__c/fields/ReturnFixedDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnFixedDate__c</fullName>
    <description>반품확정일</description>
    <label>Return Fixed Date</label>
    <type>Date</type>
</CustomField>