force-app/main/default/objects/VOCLineItem__c/fields/ReturnRequestDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnRequestDate__c</fullName>
    <description>반품요청일</description>
    <label>Return Request Date</label>
    <type>Date</type>
</CustomField>