force-app/main/default/objects/VOCLineItem__c/fields/SalePrice__c.field-meta.xml
<CustomField>
    <fullName>SalePrice__c</fullName>
    <description>판매금액</description>
    <label>Sale Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>