force-app/main/default/objects/VOCLineItem__c/fields/upd_dt__c.field-meta.xml
<CustomField>
    <fullName>upd_dt__c</fullName>
    <label>upd_dt</label>
    <type>DateTime</type>
</CustomField>