force-app/main/default/objects/VOCLineItem__c/fields/UpdateName__c.field-meta.xml
<CustomField>
    <fullName>UpdateName__c</fullName>
    <label>UpdateName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>