force-app/main/default/objects/VOCLineItem__c/fields/VOC__c.field-meta.xml
<CustomField>
    <fullName>VOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VOC</label>
    <referenceTo>VOC__c</referenceTo>
    <relationshipName>VOCLineItem</relationshipName>
    <type>Lookup</type>
</CustomField>