force-app/main/default/objects/VOCLineItem__c/fields/VOCDetailNumber__c.field-meta.xml
<CustomField>
    <fullName>VOCDetailNumber__c</fullName>
    <label>VOCDetailNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>