force-app/main/default/objects/VOCLineItem__c/fields/VOCDetails__c.field-meta.xml
<CustomField>
    <fullName>VOCDetails__c</fullName>
    <description>VoC 내역</description>
    <label>VOC Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>