force-app/main/default/objects/VOCLineItem__c/fields/VOCLineItemNumber__c.field-meta.xml
<CustomField>
    <fullName>VOCLineItemNumber__c</fullName>
    <description>VoC품목 번호</description>
    <label>VOC Line Item Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>