force-app/main/default/objects/VOCLineItem__c/fields/VOCNumber__c.field-meta.xml
<CustomField>
    <fullName>VOCNumber__c</fullName>
    <label>VOCNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>