force-app/main/default/objects/VOCLineItem__c/fields/VOCQuantity__c.field-meta.xml
<CustomField>
    <fullName>VOCQuantity__c</fullName>
    <description>VoC량</description>
    <label>VOC  Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>