force-app/main/default/objects/VOCLineItem__c/fields/VOCReasonCode__c.field-meta.xml
<CustomField>
    <fullName>VOCReasonCode__c</fullName>
    <label>VOC Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1109</fullName>
                <label>유통기한 임박</label>
            </value>
            <value>
                <fullName>1110</fullName>
                <label>제조일자 불일치</label>
            </value>
            <value>
                <fullName>1111</fullName>
                <label>납품서 재요청</label>
            </value>
            <value>
                <fullName>1112</fullName>
                <label>온도기록 재요청</label>
            </value>
            <value>
                <fullName>1001</fullName>
                <label>규격 인지오류</label>
            </value>
            <value>
                <fullName>1002</fullName>
                <label>단가오류</label>
            </value>
            <value>
                <fullName>1003</fullName>
                <label>상품명 오류</label>
            </value>
            <value>
                <fullName>1004</fullName>
                <label>중량단위 오류</label>
            </value>
            <value>
                <fullName>1005</fullName>
                <label>저장위치 오류(에러메세지)</label>
            </value>
            <value>
                <fullName>1006</fullName>
                <label>공급조절(에러메세지)</label>
            </value>
            <value>
                <fullName>1007</fullName>
                <label>구매(수발주)정보 세팅안됨(에러메세지)</label>
            </value>
            <value>
                <fullName>1008</fullName>
                <label>상품이미지 등록 오류</label>
            </value>
            <value>
                <fullName>1009</fullName>
                <label>영업데이터뷰 유지보수 누락(에러메세지)</label>
            </value>
            <value>
                <fullName>1010</fullName>
                <label>특정경로 제외(에러메세지)</label>
            </value>
            <value>
                <fullName>1011</fullName>
                <label>체인전용상품 주문불가(에러메세지)</label>
            </value>
            <value>
                <fullName>1012</fullName>
                <label>마감시간 설정오류</label>
            </value>
            <value>
                <fullName>1013</fullName>
                <label>신규업장 미공유</label>
            </value>
            <value>
                <fullName>1014</fullName>
                <label>마감임박 초도공유</label>
            </value>
            <value>
                <fullName>1015</fullName>
                <label>출고정지 대상고객</label>
            </value>
            <value>
                <fullName>1016</fullName>
                <label>영업판가 오류</label>
            </value>
            <value>
                <fullName>1017</fullName>
                <label>타사 고객 미연결</label>
            </value>
            <value>
                <fullName>1018</fullName>
                <label>타사 상품 미연결</label>
            </value>
            <value>
                <fullName>1019</fullName>
                <label>고정여신점검 누락</label>
            </value>
            <value>
                <fullName>1020</fullName>
                <label>판매오더 보류</label>
            </value>
            <value>
                <fullName>1021</fullName>
                <label>신규고객 여신 누락</label>
            </value>
            <value>
                <fullName>1022</fullName>
                <label>규격 등록오류</label>
            </value>
            <value>
                <fullName>1023</fullName>
                <label>중량 등록오류</label>
            </value>
            <value>
                <fullName>1024</fullName>
                <label>고객 주문요청 수량/중량 오류</label>
            </value>
            <value>
                <fullName>1025</fullName>
                <label>상품인지 오류</label>
            </value>
            <value>
                <fullName>1026</fullName>
                <label>상품 네이밍 등록 오류</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>