force-app/main/default/objects/VOCLineItem__c/fields/VOCTypeMediumCode__c.field-meta.xml
<CustomField>
    <fullName>VOCTypeMediumCode__c</fullName>
    <description>VoC 유형(중)</description>
    <label>VOC Type (Medium)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>VoCTypeLargeCode__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>문의</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>요청</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>주문/발주</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>배송</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>상품인도/수령</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>인적서비스</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>1급</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>2급</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>3급</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>제안</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>칭찬</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>