force-app/main/default/objects/VOCLineItem__c/fields/VOCUnit__c.field-meta.xml
<CustomField>
    <fullName>VOCUnit__c</fullName>
    <description>VoC단위</description>
    <label>VOC Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EA</fullName>
                <default>true</default>
                <label>EA</label>
            </value>
            <value>
                <fullName>BOX</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>PAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>