force-app/main/default/objects/VOCLineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>DeliveryDate__c</columns>
    <columns>OccurrenceDate__c</columns>
    <columns>Process__c</columns>
    <columns>Requirement__c</columns>
    <columns>VOCReasonCode__c</columns>
    <columns>ResponsibleDepartment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>